tests/snapshots/snapshot_rich_rendering__render_log_pane_minimised.snap
---
source: tests/snapshot_rich_rendering.rs
expression: term.backend()
---
"┌10 IPs discovered───────────────────────────────────────────────────────────────────────────────────────────────v1.2.3┐"
"│   IP           Name                 Hits  Services                                                                   █"
"│                                                                                                                      █"
"│ █ 10.0.0.1     gateway.local        412   admin-http:80                                                              █"
"│ █              router.home                ssh:22                                                                     █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.2     macbook-pro.local    7     Timothys MacBook Pro:445                                                   █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.3     nas.local            1024  Photos:5000                                                                █"
"│                synology.local             SMB:445                                                                    █"
"│                diskstation.home           AFP:548                                                                    █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.5     raspberry-pi.local   3     homeassistant:8123                                                         █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.8     printer.local        55    HP LaserJet:631                                                            █"
"│                hp-laserjet.home                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.20                         1                                                                                █"
"│                                                                                                                      █"
"│   10.0.0.42    smart-tv.local       88    Samsung TV:7000                                                            █"
"│                                           DLNA:8080                                                                  ║"
"│                                                                                                                      ║"
"│                                                                                                                      ║"
"│                                                                                                                      ║"
"│   10.0.0.100   desktop.local        200   SSH:22                                                                     ║"
"│                workstation.home                                                                                      ║"
"│                                                                                                                      ║"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 20 msgs (max: 1000)                                                                          ↑"
" [10:00:03.100] Scan complete. 10 hosts discovered.                                                                    █"
" [10:00:03.000] Host up: 10.0.0.100 (ping, 5ms)                                                                        ║"
"🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋═══════════════════════════════════════════════"
