tests/snapshots/snapshot_rich_rendering__render_many_hosts_with_many_logs.snap
---
source: tests/snapshot_rich_rendering.rs
expression: term.backend()
---
"┌10 IPs discovered───────────────────────────────────────────────────────────────────────────────────────────────v1.2.3┐"
"│   IP           Name                 Hits  Services                                                                   █"
"│                                                                                                                      █"
"│ █ 10.0.0.1     gateway.local        412   admin-http:80                                                              █"
"│ █              router.home                ssh:22                                                                     █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.2     macbook-pro.local    7     Timothys MacBook Pro:445                                                   █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.3     nas.local            1024  Photos:5000                                                                █"
"│                synology.local             SMB:445                                                                    █"
"│                diskstation.home           AFP:548                                                                    █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│                                                                                                                      █"
"│   10.0.0.5     raspberry-pi.local   3     homeassistant:8123                                                         █"
"│                                                                                                                      ║"
"│                                                                                                                      ║"
"│   10.0.0.8     printer.local        55    HP LaserJet:631                                                            ║"
"│                hp-laserjet.home                                                                                      ║"
"│                                                                                                                      ║"
"│   10.0.0.20                         1                                                                                ║"
"│                                                                                                                      ║"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 20 msgs (max: 1000)                                                                          ↑"
" [10:00:03.100] Scan complete. 10 hosts discovered.                                                                    █"
" [10:00:03.000] Host up: 10.0.0.100 (ping, 5ms)                                                                        █"
" [10:00:02.900] Scan progress: 180/254 hosts probed                                                                    █"
" [10:00:02.800] Socket error on interface wlan0: network unreachable                                                   █"
" [10:00:02.700] Service found: Samsung TV._airplay._tcp.local at 10.0.0.42:7000                                        ║"
" [10:00:02.600] Host up: 10.0.0.42 (TCP:7000, 2ms)                                                                     ║"
" [10:00:02.500] Resolved: printer.local -> 10.0.0.8                                                                    ║"
" [10:00:02.300] Host up: 10.0.0.8 (ping, 8ms)                                                                          ║"
" [10:00:02.200] Duplicate mDNS announcement for gateway.local ignored                                                  ║"
" [10:00:02.100] Service found: SMB._smb._tcp.local at 10.0.0.3:445                                                     ║"
"🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋🬋═══════════════════════════════════════════════"
