tests/snapshots/snapshot_rich_rendering__render_search_filters_hosts.snap
---
source: tests/snapshot_rich_rendering.rs
expression: term.backend()
---
" 9 IPs discovered                                   ┌───Search────┐                                              v1.2.3 "
"    IP           Name                 Hits  Services│local        │                                                    █"
"                                                    └─────────────┘                                                    █"
"  █ 10.0.0.1     gateway.local        412   admin-http:80                                                              █"
"  █              router.home                ssh:22                                                                     █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"    10.0.0.2     macbook-pro.local    7     Timothys MacBook Pro:445                                                   █"
"                                                                                                                       █"
"                                                                                                                       █"
"    10.0.0.3     nas.local            1024  Photos:5000                                                                █"
"                 synology.local             SMB:445                                                                    █"
"                 diskstation.home           AFP:548                                                                    █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"    10.0.0.5     raspberry-pi.local   3     homeassistant:8123                                                         █"
"                                                                                                                       █"
"                                                                                                                       ║"
"    10.0.0.8     printer.local        55    HP LaserJet:631                                                            ║"
"                 hp-laserjet.home                                                                                      ║"
"                                                                                                                       ║"
"    10.0.0.42    smart-tv.local       88    Samsung TV:7000                                                            ║"
"                                            DLNA:8080                                                                  ║"
"                                                                                                                        "
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
