tests/snapshots/snapshot_rich_rendering__render_search_single_match.snap
---
source: tests/snapshot_rich_rendering.rs
expression: term.backend()
---
" 1 IPs discovered                                   ┌───Search────┐                                              v1.2.3 "
"    IP          Name                 Hits  Services │chromecast   │                                                    █"
"                                                    └─────────────┘                                                    █"
"  █ 10.0.0.200  chromecast.local     31    Chromecast:8009                                                             █"
"  █             google-cast.local                                                                                      █"
"                living-room-tv.home                                                                                    █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                       █"
"                                                                                                                        "
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
